--- a/pages/EmployeePayroll.html
+++ b/pages/EmployeePayroll.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../css/employeepayroll.css">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;600&display=swap" rel="stylesheet">
+    <script type="text/javascript" src="../js/employepayroll.js"></script>
     <title>Employee Payroll App</title>
 </head>
 
@@ -81,7 +82,7 @@
             <div class="row-content">
                 <label class="label text" for="salary">Choose Your Salary: </label>
                 <input class="input" type="range" name="salary" id="salary" min="300000" max="500000" step="100" value="400000">
-                <output class="salary-output text" for="salary">400000</output>
+                <output class="salary-output" for="salary">400000</output>
             </div>
 
 
