Added: On submit form Populating Employee Object

--- a/pages/EmployeePayroll.html
+++ b/pages/EmployeePayroll.html
@@ -7,7 +7,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../css/employeepayroll.css">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;600&display=swap" rel="stylesheet">
-    <script type="text/javascript" src="../js/employepayroll.js"></script>
+    <script type="text/javascript" src="../js/EmployeePayrollform.js"></script>
+    <script type="text/javascript" src="../js/EmployeePayrollData.js"></script>
+    <link rel="logo" href="../assets/images/logo.jpg">
     <title>Employee Payroll App</title>
 </head>
 
