Added Storing the employee Payroll object to local storage

--- a/pages/EmployeePayroll.html
+++ b/pages/EmployeePayroll.html
@@ -24,7 +24,7 @@
         </div>
     </header>
     <div class="form-content">
-        <form class="form" onsubmit="save(event)">
+        <form class="form" onsubmit="save()">
             <div class="form-head">Employee Payroll Form</div>
             <div class="row-content">
                 <label for="name" class="label text">Name</label>
@@ -148,7 +148,7 @@
                         <option value="2017">2017</option>
                         <option value="2016">2016</option>
                     </select>
-                    <error-output class="dates-error" for="error"></error-output>
+                    <error-output class="date-error" for="error"></error-output>
 
                 </div>
             </div>
