--- a/pages/EmployeePayroll.html
+++ b/pages/EmployeePayroll.html
@@ -24,7 +24,7 @@
         </div>
     </header>
     <div class="form-content">
-        <form class="form" onsubmit="save()">
+        <form class="form" onsubmit="save(event)">
             <div class="form-head">Employee Payroll Form</div>
             <div class="row-content">
                 <label for="name" class="label text">Name</label>
@@ -161,7 +161,7 @@
             <div class="buttonParent">
                 <a href="./home.html" class="resetButton button cancelButton">Cancel</a>
                 <div class="submit-reset">
-                    <button type="submit" class="button submitButton" id="submitButton">Submit</button>
+                    <button type="submit" class="button submitButton">Submit</button>
                     <button type="reset" class="resetButton button">Reset</button>
                 </div>
             </div>
