--- a/pages/EmployeePayrollAddEmployeeForm.html
+++ b/pages/EmployeePayrollAddEmployeeForm.html
@@ -15,7 +15,7 @@
 
 <body>
     <header class="header-content header">
-        <div class="logo-content">
+        <div class="logo-content" onclick="location.href='./EmployeePayrollHomePage.html'">
             <img src="../assets/images/logo.png" alt="logo">
             <div>
                 <span class="emp-text">EMPLOYEE</span><br>
@@ -159,7 +159,7 @@
             </div>
 
             <div class="buttonParent">
-                <a href="./home.html" class="resetButton button cancelButton">Cancel</a>
+                <a href="./EmployeePayrollHomePage.html" class="resetButton button cancelButton">Cancel</a>
                 <div class="submit-reset">
                     <button type="submit" class="button submitButton">Submit</button>
                     <button type="reset" class="resetButton button">Reset</button>
