--- a/pages/EmployeePayrollHomePage.html
+++ b/pages/EmployeePayrollHomePage.html
@@ -9,12 +9,13 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="../css/HomePage.css">
     <script src="../js/HomePageData.js"></script>
+    <script src="../js/utility.js"></script>
     <title>Employee Payroll HomePage</title>
 </head>
 
 <body>
     <header class="header-content header">
-        <div class="logo-content">
+        <div class="logo-content" onclick="location.href='../pages/EmployeePayrollHomePage.html'">
             <img src="../assets/images/logo.png" alt="logo">
             <div>
                 <span class="emp-text">EMPLOYEE</span><br>
@@ -26,7 +27,7 @@
         <div class="header-content sub-main-content">
             <div class="emp-details-text">
                 Employee Details
-                <div class="emp-count">10</div>
+                <div class="emp-count">0</div>
             </div>
             <div onclick="location.href='./EmployeePayrollAddEmployeeForm.html'" class="add-button">
                 <div class="plus-icon">
@@ -37,33 +38,7 @@
         </div>
         <div class="table-main">
             <table id="display" class="table">
-                <tr>
-                    <th></th>
-                    <th>Name</th>
-                    <th>Gender</th>
-                    <th>Department</th>
-                    <th>Salary</th>
-                    <th>StartDate</th>
-                    <th>Actions</th>
-                </tr>
-                <td>
-                    <img class="profile" src="../assets/profile-images/Ellipse -3.png">
 
-                </td>
-                <td>
-                    Prashanth N
-                </td>
-                <td>Male</td>
-                <td>
-                    <div class="dept-label">Engineer</div>
-                    <div class="dept-label">Others</div>
-                </td>
-                <td>400000</td>
-                <td>16 Oct 2021</td>
-                <td>
-                    <img alt="delete" src="../assets/icons/delete-black-18dp.svg">
-                    <img alt="edit" src="../assets/icons/create-black-18dp.svg">
-                </td>
             </table>
         </div>
     </div>
