Refactored: Updating the Employee Payroll Details in HomePage

--- a/pages/EmployeePayrollAddEmployeeForm.html
+++ b/pages/EmployeePayrollAddEmployeeForm.html
@@ -10,6 +10,7 @@
     <script type="text/javascript" src="../js/EmployeePayrollform.js"></script>
     <script type="text/javascript" src="../js/EmployeePayrollData.js"></script>
     <script src="../js/utility.js"></script>
+    <script type="text/javascript" src="../js/Site_Properties.js"></script>
     <link rel="logo" href="../assets/images/logo.jpg">
     <title>Employee Payroll Form</title>
 </head>
