--- a/pages/EmployeePayrollHomePage.html
+++ b/pages/EmployeePayrollHomePage.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="../css/HomePage.css">
     <script src="../js/HomePageData.js"></script>
     <script src="../js/utility.js"></script>
+    <script type="text/javascript" src="../js/Site_Properties.js"></script>
     <title>Employee Payroll HomePage</title>
 </head>
 
